[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Scpt_Character.gd" type="Script" id=1]
[ext_resource path="res://Shaders/Sprite_Shader.gdshader" type="Shader" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 9 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/flash_color = Color( 0.780392, 0.862745, 0.815686, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 9 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )

[node name="Hitbox_Area" type="Area2D" parent="Sprite"]
collision_layer = 32
collision_mask = 4

[node name="Hitbox_Collision" type="CollisionShape2D" parent="Sprite/Hitbox_Area"]
position = Vector2( 9, 0 )
shape = SubResource( 2 )

[node name="Animation_Player" type="AnimationPlayer" parent="."]

[node name="Hitstun_Timer" type="Timer" parent="."]

[node name="Flash_Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Sprite/Hitbox_Area" to="." method="_on_hitbox_entered"]
[connection signal="timeout" from="Hitstun_Timer" to="." method="_on_Hitstun_Timer_end"]
[connection signal="timeout" from="Flash_Timer" to="." method="_on_Flash_Timer_end"]
